<resources>
    <string name="app_name">Book App</string>
    <string name="action_settings">Settings</string>
    <string name="action_search">Search</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <string name="nav_item_home">Home</string>
    <string name="nav_item_friends">Friends</string>
    <string name="nav_item_messages">Messages</string>
    <string name="nav_item_books">Books</string>

    <!-- navigation drawer item labels  -->
    <string-array name="nav_drawer_labels">
        <item>@string/title_home</item>
        <item>@string/title_profile</item>
        <item>@string/title_settings</item>
    </string-array>

    <string name="title_profile">Profile</string>
    <string name="title_settings">Settings</string>
    <string name="title_home">Home</string>

    <string name="rate">Rate</string>
    <string name="recommend">Recommend</string>
    <string name="review">Review</string>
    <string name="book">Book</string>

    <string name="follow">Follow</string>
    <string name="unfollow">Unfollow</string>
    <string name="following">Following</string>
    <string name="reading">Reading</string>
    <string name="reviewed">Reviewed</string>
    <string name="logout">Logout</string>

    <string name="placeholder">Placeholder</string>

    <string name="hello_blank_fragment">This is a blank fragment</string>
    <string name="book_results">Book Results</string>
    <string name="user_search_title">User Results</string>
</resources>