<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingStart="20dp"
        android:paddingEnd="20dp">

        <ImageView
            android:id="@+id/person_picture"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_margin="5dp"
            android:src="@drawable/profile_pic_frame"/>

        <TextView
            android:id="@+id/person_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center_horizontal"
            android:textSize="10pt"
            android:text="Name"/>

        <Button
            android:id="@+id/person_action"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:text="@string/follow" />

        <ImageView
            android:id="@+id/horizontal_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@color/secondaryTextColor"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp" />

        <TextView
            android:id="@+id/reading_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:text="@string/reading"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reading_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

        <ImageView
            android:id="@id/horizontal_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:src="@color/secondaryTextColor"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp" />

        <TextView
            android:id="@+id/reviewed_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="8pt"
            android:text="@string/reviewed"/>

        <android.support.v7.widget.RecyclerView
            android:id="@+id/reviewed_list"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"/>

    </LinearLayout>
    </ScrollView>
</android.support.constraint.ConstraintLayout>