<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingEnd="20dp"
        android:paddingStart="20dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <include
                layout="@layout/book_cover_view"
                android:layout_width="0dp"
                android:layout_height="200dp"
                android:layout_gravity="center_horizontal"
                android:layout_margin="10dp"
                android:layout_weight="1" />

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/book_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Title"
                    android:textSize="10pt" />

                <TextView
                    android:id="@+id/book_author"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Author"
                    android:textSize="8pt"
                    android:textStyle="italic" />

                <TextView
                    android:id="@+id/book_meta"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:gravity="center_horizontal"
                    android:text="Publish Date | ISBN"
                    android:textSize="6pt" />

                <include
                    layout="@layout/goodreads_rating_tag"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp" />
            </LinearLayout>

        </LinearLayout>

        <ImageView
            android:id="@+id/horizontal_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:src="@color/secondaryTextColor" />

        <TextView
            android:id="@+id/book_summary"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:text="Summary" />

        <ImageView
            android:id="@id/horizontal_divider"
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginBottom="3dp"
            android:layout_marginTop="3dp"
            android:src="@color/secondaryTextColor" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/book_reviews"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <Button
                android:id="@+id/rate_button"
                style="?buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/rate" />

            <Button
                android:id="@+id/review_button"
                style="?buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/review" />

            <Button
                android:id="@+id/recommend_button"
                style="?buttonBarButtonStyle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/recommend" />
        </LinearLayout>

    </LinearLayout>
</android.support.constraint.ConstraintLayout>